# makedb-better

./: CMakeLists.txt
include/: ILogger.h  IStorage.h  console_logger.h  file_storage.h  global_logger.h  location.h  page_directory.h  page_manager.h  page_size.h  parser.h  row.h  schema.h  slotted_page.h  table.h
src/: file_storage.cpp  page_directory.cpp  page_manager.cpp  parser.cpp  row.cpp  schema.cpp  slotted_page.cpp  table.cpp
